--- a/login.css
+++ b/login.css
@@ -1,124 +1,138 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-.login{
-    position: relative;
-    top: 120px;
-    left: 37%;
-    height: 400px;
+.login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 500px;
     width: 400px;
-    background-color: rgb(47, 55, 85);
+    background-color: #3957BF;
     border-radius: 19px;
     box-shadow: 2px 2px 9px 2px #808080;
     color: #fff;
+    padding: 20px;
 }
 
-h1{
-    padding-left: 34%;
-}
-
-.nav{
+.nav {
     display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
-button{
-    margin-top: 10px;
-    margin-left: 110px;
-    height: 20px;
-    width: 50px;
+button {
+    height: 30px;
+    width: 80px;
     border-radius: 15px;
     border: none;
-    box-shadow: 2px 2px 9px 2px #808080;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 220px;
 }
 
-form{
-    margin-top: 20px;
-    margin-left: 100px;
+button:hover {
+    background-color: #0056b3;
 }
-form #submit{
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form {
+    margin-top: 20px;
+}
+
+form #submit {
     border-radius: 9px;
     border: none;
     box-shadow: 2px 2px 9px 2px #808080;
     width: 70px;
     margin-top: 10px;
-    margin-left: 50px;
+    margin-left: 140px;
     padding-left: 0px;
 }
 
-i{
+i {
     margin-right: 5px;
 }
 
-input{
+input {
     border-radius: 9px;
-    padding-left: 5px;
-    margin-bottom: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
+    width: calc(100% - 20px); /* Adjusted width */
 }
 
-#forgotPassword{
-    color: #fff;
-    padding-top: 10px;
-    padding-left: 34%;
-}
-
-#forgotPassword:hover{
-    color: rgb(255,0,0);
-}
-p{
+#forgotPassword {
+    text-align: center;
     margin-top: 10px;
-    padding-left: 22%;
 }
 
-.Already{
+#forgotPassword a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#forgotPassword a:hover {
+    color: rgb(255, 0, 0);
+}
+
+.Already {
     display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
-.signup{
-    margin-top: 10px;
-    margin-left: 10px;
+.signup {
     color: #fff;
+    text-decoration: none;
+    padding-left: 10px;
 }
 
-.signup:hover{
+.signup:hover {
     color: rgb(47, 0, 255);
 }
 
-.GorF{
+.GorF {
+    text-align: center;
     margin-top: 35px;
-    position: relative;
-    left: 17%;
-    font-size: large;
+}
+
+.line1,
+.line2 {
+    border-top: 1px solid #fff;
+    width: 40%;
+    margin: 0 100px;
+}
+
+.option {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
-.line1{
-    border-top: 3px solid #fff;
-    width: 70px;
-    margin-top: 12px;
-}
-.line2{
-    border-top: 3px solid #fff;
-    width: 70px;
-    margin-top: 12px;
+.or {
+    color: #fff;
+    margin: 0 10px;
 }
 
-.option{
-    display: flex;
-    margin-top: 15px;
-    margin-left: 40%;    
-}
-.or{
-    padding-left: 10px;
-    padding-right: 10px;
+.google,
+.facebook {
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
 }
 
-.google{
-    padding-top: 10px;
-}
-.facebook{
-    padding-top: 10px;
+.google:hover,
+.facebook:hover {
+    color: rgb(0, 204, 255);
 }
